# hypermodern-python-koa

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  README.md  genindex.html  index.html  licence.html  noxfile.py  objects.inv  pyproject.toml  reference.html  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  licence.doctree  reference.doctree
.github/workflows/: coverage.yml  documentation.yml  publish.yml  tests.yml
docs/: conf.py
src/hypermodern_python_koa/: console.py  wikipedia.py
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
