[tool.poetry]
name = "hypermodern-python-koa"
version = "0.1.0"
description = ""
authors = ["kadamopoulos <constantinosadamopoulos@gmail.com>", 
            "edsml-ka2523 <konstantinos.adamopoulos23@imperial.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kadamopoulos/hypermodern-python"
repository = "https://github.com/kadamopoulos/hypermodern-python"
keywords = ["hypermodern"]
