[tool.poetry]
name = "hypermodern-python-koa"
version = "0.1.0"
description = ""
authors = ["kadamopoulos <constantinosadamopoulos@gmail.com>", 
            "edsml-ka2523 <konstantinos.adamopoulos23@imperial.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
coverage = {extras = ["toml"], version = "^7.6.9"}
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kadamopoulos/hypermodern-python-koa"
repository = "https://github.com/kadamopoulos/hypermodern-python-koa"
keywords = ["hypermodern"]

[tool.poetry.scripts]
hypermodern-python-koa = "hypermodern_python_koa.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python_koa"]

[tool.coverage.report]
show_missing = true
fail_under = 100
